@@ -6,7 +6,8 @@
 #
 # ftp://ftp.gnu.org/gnu/vera
 #
-H:This infopack provides the VERA database of acronyms. You can check for a given a acronym using "acronym <acronym>".
+h:acronyms:acronyms?|vera
+H:The vera infopack provides the VERA database of acronyms. You can check for a given a acronym using "acronym <acronym>".
 T:acronym\s+(\w+)\s*\?*$
 D:t:No acronym for that.
 D:t:I don't know this acronym.
