@@ -7,6 +7,8 @@
 	  Mark Pilgrim's "ultra liberal" parser, and allows one
 	  to send news from any RSS feed to any user/channel/server.
 	* QUICK_START: Added small startup tutorial.
+	* modules/{help.py,infopack.py}: Integrated infopack help
+	  into main help.
 
 2003-08-24 Gustavo Niemeyer <niemeyer@conectiva.com>
 	* pybot/misc.py,modules/help.py,modules/*: Now regular
